--- a/julia-output/comp-types.ipynb
+++ b/julia-output/comp-types.ipynb
@@ -94,6 +94,25 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mystruct\n",
+      "  num: Int64 13\n",
+      "  str: String \"hello\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
      "ename": "ErrorException",
      "evalue": "setfield!: immutable struct of type Mystruct cannot be changed",
      "output_type": "error",
@@ -104,7 +123,7 @@
       " [1] setproperty!(x::Mystruct, f::Symbol, v::String)\n",
       "   @ Base ./Base.jl:53\n",
       " [2] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/comp-types.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W6sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -114,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -178,13 +197,13 @@
       " [1] Int64\n",
       "   @ ./float.jl:994 [inlined]\n",
       " [2] Integer\n",
-      "   @ ./boot.jl:927 [inlined]\n",
+      "   @ ./boot.jl:926 [inlined]\n",
       " [3] convert\n",
       "   @ ./number.jl:7 [inlined]\n",
       " [4] setproperty!(x::MutableStruct, f::Symbol, v::Float64)\n",
       "   @ Base ./Base.jl:52\n",
       " [5] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/comp-types.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X13sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -194,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,13 +249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3♡"
+       "Card(3, 2)"
       ]
      },
      "metadata": {},
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -315,51 +334,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "BoundsError",
-     "evalue": "BoundsError: attempt to access 13-element Vector{Char} at index [-10]",
+     "ename": "ArgumentError",
+     "evalue": "ArgumentError: The rank must be an integer between 1 and 13.",
      "output_type": "error",
      "traceback": [
-      "BoundsError: attempt to access 13-element Vector{Char} at index [-10]\n",
+      "ArgumentError: The rank must be an integer between 1 and 13.\n",
       "\n",
       "Stacktrace:\n",
-      "  [1] throw_boundserror(A::Vector{Char}, I::Tuple{Int64})\n",
-      "    @ Base ./essentials.jl:14\n",
-      "  [2] getindex(A::Vector{Char}, i::Int64)\n",
-      "    @ Base ./essentials.jl:892\n",
-      "  [3] show(io::IOContext{IOBuffer}, c::Card)\n",
-      "    @ Main ~/code/sci-comp-book/julia-output/comp-types.ipynb:1\n",
-      "  [4] show\n",
-      "    @ ./multimedia.jl:47 [inlined]\n",
-      "  [5] limitstringmime(mime::MIME{Symbol(\"text/plain\")}, x::Card)\n",
-      "    @ VSCodeServer.IJuliaCore ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/IJuliaCore/src/inline.jl:22\n",
-      "  [6] display_mimestring(m::MIME{Symbol(\"text/plain\")}, x::Card)\n",
-      "    @ VSCodeServer.IJuliaCore ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/IJuliaCore/src/display.jl:67\n",
-      "  [7] display_dict(x::Card)\n",
-      "    @ VSCodeServer.IJuliaCore ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/IJuliaCore/src/display.jl:98\n",
-      "  [8] display(::VSCodeServer.JuliaNotebookInlineDisplay, x::Card)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/VSCodeServer/src/notebookdisplay.jl:32\n",
-      "  [9] display(x::Any)\n",
-      "    @ Base.Multimedia ./multimedia.jl:340\n",
-      " [10] #invokelatest#2\n",
-      "    @ ./essentials.jl:1031 [inlined]\n",
-      " [11] invokelatest\n",
-      "    @ ./essentials.jl:1028 [inlined]\n",
-      " [12] (::VSCodeServer.var\"#219#220\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:48\n",
-      " [13] withpath(f::VSCodeServer.var\"#219#220\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
-      " [14] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, params::VSCodeServer.NotebookRunCellArguments)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
-      " [15] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::Dict{String, Any})\n",
-      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/JSONRPC/src/typed.jl:67\n",
-      " [16] serve_notebook(pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; crashreporting_pipename::String)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:139\n",
-      " [17] top-level scope\n",
-      "    @ ~/.vscode/extensions/julialang.language-julia-1.79.2/scripts/notebook/notebook.jl:35"
+      " [1] Card(r::Int64, s::Int64)\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:7\n",
+      " [2] top-level scope\n",
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -369,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +376,8 @@
     "  # construct a card based on the number in a deck\n",
     "  function Card(i::Int)\n",
     "    1 <= i <= 52 || throw(ArgumentError(\"The argument must be an integer between 1 and 52\"))\n",
-    "    mod(i,13)==0 ? new(13,div(i,13)) : new(mod(i,13),div(i,13)+1)\n",
+    "    # mod(i,13)==0 ? new(13,div(i,13)) : new(mod(i,13),div(i,13)+1)\n",
+    "    new(mod1(i,13), div(i-1,13)+1)\n",
     "  end\n",
     "end"
    ]
@@ -406,9 +396,9 @@
       "\n",
       "Stacktrace:\n",
       " [1] Card(r::Int64, s::Int64)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/comp-types.ipynb:7\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:7\n",
       " [2] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/comp-types.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -418,7 +408,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "52-element Vector{Card}:\n",
+       " A♠\n",
+       " 2♠\n",
+       " 3♠\n",
+       " 4♠\n",
+       " 5♠\n",
+       " 6♠\n",
+       " 7♠\n",
+       " 8♠\n",
+       " 9♠\n",
+       " T♠\n",
+       " ⋮\n",
+       " 5♣\n",
+       " 6♣\n",
+       " 7♣\n",
+       " 8♣\n",
+       " 9♣\n",
+       " T♣\n",
+       " J♣\n",
+       " Q♣\n",
+       " K♣"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "map(i -> Card(mod1(i,13), div(i-1,13)+1) , 1:52)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,13 +535,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Polynomial{Int64}([1, 2, 3, 4, 5, 6])"
+       "1 x^0 + 2 x^1  + 3 x^2  + 4 x^3  + 5 x^4  + 6 x^5 "
       ]
      },
      "metadata": {},
@@ -529,13 +558,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Polynomial{Rational{Int64}}(Rational{Int64}[2//3, 3//4, 5//8])"
+       "2//3 x^0 + 3//4 x^1  + 5//8 x^2 "
       ]
      },
      "metadata": {},
@@ -548,12 +577,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "function Base.show(io::IO, p::Polynomial)\n",
-    "  print(io, reduce((str, n) -> \"$str $(n==1 ? \"\" : \"+\") $(p.coeffs[n]) x^$(n-1)\", 1:length(p.coeffs),init=\"\"))\n",
+    "  print(io, mapreduce(i -> \"$(p.coeffs[i]) x^$(i-1)\", (str, term) -> \"$str + $term \" , 1:length(p.coeffs)))\n",
     "end"
    ]
   },
@@ -597,12 +626,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "ename": "MethodError",
-     "evalue": "MethodError: no method matching +(::Polynomial{Int64}, ::Polynomial{Float64})\nThe function `+` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  +(::Any, ::Any, !Matched::Any, !Matched::Any...)\n   @ Base operators.jl:596\n  +(!Matched::BitMatrix, !Matched::LinearAlgebra.UniformScaling)\n   @ LinearAlgebra ~/.julia/juliaup/julia-1.11.0-beta2+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/LinearAlgebra/src/uniformscaling.jl:151\n  +(!Matched::Bool, !Matched::Complex{Bool})\n   @ Base complex.jl:308\n  ...\n",
+     "evalue": "MethodError: no method matching +(::Polynomial{Int64}, ::Polynomial{Float64})\nThe function `+` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  +(::Any, ::Any, !Matched::Any, !Matched::Any...)\n   @ Base operators.jl:596\n  +(!Matched::Rational{BigInt}, !Matched::Rational{BigInt})\n   @ Base gmp.jl:1056\n  +(!Matched::Bool, !Matched::Complex{Bool})\n   @ Base complex.jl:308\n  ...\n",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching +(::Polynomial{Int64}, ::Polynomial{Float64})\n",
@@ -611,8 +640,8 @@
       "Closest candidates are:\n",
       "  +(::Any, ::Any, !Matched::Any, !Matched::Any...)\n",
       "   @ Base operators.jl:596\n",
-      "  +(!Matched::BitMatrix, !Matched::LinearAlgebra.UniformScaling)\n",
-      "   @ LinearAlgebra ~/.julia/juliaup/julia-1.11.0-beta2+0.aarch64.apple.darwin14/share/julia/stdlib/v1.11/LinearAlgebra/src/uniformscaling.jl:151\n",
+      "  +(!Matched::Rational{BigInt}, !Matched::Rational{BigInt})\n",
+      "   @ Base gmp.jl:1056\n",
       "  +(!Matched::Bool, !Matched::Complex{Bool})\n",
       "   @ Base complex.jl:308\n",
       "  ...\n",
@@ -620,7 +649,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/comp-types.ipynb:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -630,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,13 +668,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "+ (generic function with 198 methods)"
+       "+ (generic function with 199 methods)"
       ]
      },
      "metadata": {},
@@ -653,20 +682,20 @@
     }
    ],
    "source": [
-    "function +(p1::Polynomial{T},p2::Polynomial{S}) where {T <: Number, S <: Number}\n",
+    "function +(p1::Polynomial{<:Number},p2::Polynomial{<:Number})\n",
     "  Polynomial(p1.coeffs+p2.coeffs)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "  2.0 x^0 + 4.0 x^1 + 6.0 x^2"
+       "2.0 x^0 + 4.0 x^1  + 6.0 x^2 "
       ]
      },
      "metadata": {},
@@ -679,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -693,28 +722,9 @@
     }
    ],
    "source": [
-    "function eval(poly::Polynomial{T},x::Number) where T <: Number\n",
+    "function eval(poly::Polynomial{<:Number},x::Number)\n",
     "  reduce((val,i) -> val + poly.coeffs[i]*x^(i-1), 1:length(poly.coeffs))\n",
     "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "eval(poly1,-2)"
    ]
   },
   {
@@ -725,6 +735,25 @@
     {
      "data": {
       "text/plain": [
+       "9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eval(poly1,-2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "eval (generic function with 2 methods)"
       ]
      },
@@ -733,14 +762,14 @@
     }
    ],
    "source": [
-    "function eval(poly::Polynomial{T}, x::Number) where T <: Number\n",
+    "function eval(poly::Polynomial{<:Number}, x::Number)\n",
     "  reduce((val,c) -> x*val+c, reverse(poly.coeffs))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -798,28 +827,29 @@
     }
    ],
    "source": [
-    "function newton(f::Function, x0::Number)\n",
-    "  local dx = 1\n",
-    "  local x1 = x0\n",
-    "  local steps = 0\n",
-    "  while abs(dx) > 1e-6 && steps < 10\n",
-    "    dx = f(x1)/ForwardDiff.derivative(f,x1)\n",
-    "    x1 -= dx\n",
-    "    steps += 1\n",
+    "function newton(f::Function, x0::Number; tol::Real = 1e-6, max_steps = 10)\n",
+    "  local dx\n",
+    "  for i = 1:max_steps\n",
+    "    dx = f(x0)/ForwardDiff.derivative(f, x0)\n",
+    "    x0 -= dx\n",
+    "    abs(dx) < 1e-6 && return Root(x0, dx, f(x0), i, true, max_steps)\n",
     "  end\n",
-    "  Root(x1, dx, f(x1), steps, steps < 10, 10)\n",
+    "  Root(x0, dx, f(x0), max_steps, false, max_steps)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Root(1.4142135623730951, 1.5947429102833119e-12, 4.440892098500626e-16, 5, true, 10)"
+       "The root is approximately x̂ = 1.4142135623730951\n",
+       "An estimate for the error is 1.5947429102833119e-12\n",
+       "with f(x̂) = 4.440892098500626e-16\n",
+       "which took 5 steps"
       ]
      },
      "metadata": {},
@@ -832,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +933,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.2",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -911,7 +941,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.2"
   }
  },
  "nbformat": 4,
