--- a/julia-output/db.ipynb
+++ b/julia-output/db.ipynb
@@ -40,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using SQLite"
+    "using SQLite, DataFrames"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -68,13 +68,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SQLite.Query{false}(SQLite.Stmt(SQLite.DB(\"forecast.sqlite\"), Base.RefValue{Ptr{SQLite.C.sqlite3_stmt}}(Ptr{SQLite.C.sqlite3_stmt} @0x000000014724d610), Dict{Int64, Any}()), Base.RefValue{Int32}(101), Symbol[], Type[], Dict{Symbol, Int64}(), Base.RefValue{Int64}(0))"
+       "101"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "SQLite.drop!(db, \"FORECAST\", ifexists = true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SQLite.Query{false}(SQLite.Stmt(SQLite.DB(\"forecast.sqlite\"), Base.RefValue{Ptr{SQLite.C.sqlite3_stmt}}(Ptr{SQLite.C.sqlite3_stmt} @0x0000000152947760), Dict{Int64, Any}()), Base.RefValue{Int32}(101), Symbol[], Type[], Dict{Symbol, Int64}(), Base.RefValue{Int64}(0))"
       ]
      },
      "metadata": {},
@@ -95,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,13 +127,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><div style = \"float: left;\"><span>9×6 DataFrame</span></div><div style = \"clear: both;\"></div></div><div class = \"data-frame\" style = \"overflow-x: scroll;\"><table class = \"data-frame\" style = \"margin-bottom: 6px;\"><thead><tr class = \"header\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">Row</th><th style = \"text-align: left;\">DATE_ID</th><th style = \"text-align: left;\">DATE</th><th style = \"text-align: left;\">HI_TEMP</th><th style = \"text-align: left;\">LO_TEMP</th><th style = \"text-align: left;\">PRECIP</th><th style = \"text-align: left;\">COND</th></tr><tr class = \"subheader headerLastRow\"><th class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\"></th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"String\" style = \"text-align: left;\">String</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"Int64\" style = \"text-align: left;\">Int64</th><th title = \"String\" style = \"text-align: left;\">String</th></tr></thead><tbody><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">1</td><td style = \"text-align: right;\">1</td><td style = \"text-align: left;\">2024-12-07</td><td style = \"text-align: right;\">37</td><td style = \"text-align: right;\">23</td><td style = \"text-align: right;\">0</td><td style = \"text-align: left;\">Partly Cloudy</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">2</td><td style = \"text-align: right;\">2</td><td style = \"text-align: left;\">2024-12-08</td><td style = \"text-align: right;\">44</td><td style = \"text-align: right;\">28</td><td style = \"text-align: right;\">60</td><td style = \"text-align: left;\">Snow</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">3</td><td style = \"text-align: right;\">3</td><td style = \"text-align: left;\">2024-12-09</td><td style = \"text-align: right;\">44</td><td style = \"text-align: right;\">32</td><td style = \"text-align: right;\">75</td><td style = \"text-align: left;\">Rain</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">4</td><td style = \"text-align: right;\">4</td><td style = \"text-align: left;\">2024-12-10</td><td style = \"text-align: right;\">44</td><td style = \"text-align: right;\">39</td><td style = \"text-align: right;\">70</td><td style = \"text-align: left;\">Rain</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">5</td><td style = \"text-align: right;\">5</td><td style = \"text-align: left;\">2024-12-11</td><td style = \"text-align: right;\">58</td><td style = \"text-align: right;\">40</td><td style = \"text-align: right;\">80</td><td style = \"text-align: left;\">Rain</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">6</td><td style = \"text-align: right;\">6</td><td style = \"text-align: left;\">2024-12-12</td><td style = \"text-align: right;\">48</td><td style = \"text-align: right;\">28</td><td style = \"text-align: right;\">60</td><td style = \"text-align: left;\">Rain</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">7</td><td style = \"text-align: right;\">7</td><td style = \"text-align: left;\">2024-12-13</td><td style = \"text-align: right;\">37</td><td style = \"text-align: right;\">25</td><td style = \"text-align: right;\">0</td><td style = \"text-align: left;\">Sunny</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">8</td><td style = \"text-align: right;\">8</td><td style = \"text-align: left;\">2024-12-14</td><td style = \"text-align: right;\">40</td><td style = \"text-align: right;\">24</td><td style = \"text-align: right;\">0</td><td style = \"text-align: left;\">Sunny</td></tr><tr><td class = \"rowNumber\" style = \"font-weight: bold; text-align: right;\">9</td><td style = \"text-align: right;\">9</td><td style = \"text-align: left;\">2024-12-15</td><td style = \"text-align: right;\">45</td><td style = \"text-align: right;\">30</td><td style = \"text-align: right;\">0</td><td style = \"text-align: left;\">Cloudy</td></tr></tbody></table></div>"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|cccccc}\n",
+       "\t& DATE\\_ID & DATE & HI\\_TEMP & LO\\_TEMP & PRECIP & COND\\\\\n",
+       "\t\\hline\n",
+       "\t& Int64 & String & Int64 & Int64 & Int64 & String\\\\\n",
+       "\t\\hline\n",
+       "\t1 & 1 & 2024-12-07 & 37 & 23 & 0 & Partly Cloudy \\\\\n",
+       "\t2 & 2 & 2024-12-08 & 44 & 28 & 60 & Snow \\\\\n",
+       "\t3 & 3 & 2024-12-09 & 44 & 32 & 75 & Rain \\\\\n",
+       "\t4 & 4 & 2024-12-10 & 44 & 39 & 70 & Rain \\\\\n",
+       "\t5 & 5 & 2024-12-11 & 58 & 40 & 80 & Rain \\\\\n",
+       "\t6 & 6 & 2024-12-12 & 48 & 28 & 60 & Rain \\\\\n",
+       "\t7 & 7 & 2024-12-13 & 37 & 25 & 0 & Sunny \\\\\n",
+       "\t8 & 8 & 2024-12-14 & 40 & 24 & 0 & Sunny \\\\\n",
+       "\t9 & 9 & 2024-12-15 & 45 & 30 & 0 & Cloudy \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "\u001b[1m9×6 DataFrame\u001b[0m\n",
+       "\u001b[1m Row \u001b[0m│\u001b[1m DATE_ID \u001b[0m\u001b[1m DATE       \u001b[0m\u001b[1m HI_TEMP \u001b[0m\u001b[1m LO_TEMP \u001b[0m\u001b[1m PRECIP \u001b[0m\u001b[1m COND          \u001b[0m\n",
+       "     │\u001b[90m Int64   \u001b[0m\u001b[90m String     \u001b[0m\u001b[90m Int64   \u001b[0m\u001b[90m Int64   \u001b[0m\u001b[90m Int64  \u001b[0m\u001b[90m String        \u001b[0m\n",
+       "─────┼──────────────────────────────────────────────────────────────\n",
+       "   1 │       1  2024-12-07       37       23       0  Partly Cloudy\n",
+       "   2 │       2  2024-12-08       44       28      60  Snow\n",
+       "   3 │       3  2024-12-09       44       32      75  Rain\n",
+       "   4 │       4  2024-12-10       44       39      70  Rain\n",
+       "   5 │       5  2024-12-11       58       40      80  Rain\n",
+       "   6 │       6  2024-12-12       48       28      60  Rain\n",
+       "   7 │       7  2024-12-13       37       25       0  Sunny\n",
+       "   8 │       8  2024-12-14       40       24       0  Sunny\n",
+       "   9 │       9  2024-12-15       45       30       0  Cloudy"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "DataFrame(DBInterface.execute(db, \"SELECT * FROM FORECAST\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SQLite.Query{false}(SQLite.Stmt(SQLite.DB(\"forecast.sqlite\"), Base.RefValue{Ptr{SQLite.C.sqlite3_stmt}}(Ptr{SQLite.C.sqlite3_stmt} @0x00000001480cbcf0), Dict{Int64, Any}()), Base.RefValue{Int32}(100), [:DATE_ID, :DATE, :HI_TEMP, :LO_TEMP, :PRECIP, :COND], Type[Union{Missing, Int64}, Union{Missing, String}, Union{Missing, Int64}, Union{Missing, Int64}, Union{Missing, Int64}, Union{Missing, String}], Dict(:COND => 6, :HI_TEMP => 3, :DATE => 2, :PRECIP => 5, :LO_TEMP => 4, :DATE_ID => 1), Base.RefValue{Int64}(0))"
+       "SQLite.Query{false}(SQLite.Stmt(SQLite.DB(\"forecast.sqlite\"), Base.RefValue{Ptr{SQLite.C.sqlite3_stmt}}(Ptr{SQLite.C.sqlite3_stmt} @0x00000001380f3b80), Dict{Int64, Any}()), Base.RefValue{Int32}(100), [:DATE_ID, :DATE, :HI_TEMP, :LO_TEMP, :PRECIP, :COND], Type[Union{Missing, Int64}, Union{Missing, String}, Union{Missing, Int64}, Union{Missing, Int64}, Union{Missing, Int64}, Union{Missing, String}], Dict(:COND => 6, :HI_TEMP => 3, :DATE => 2, :PRECIP => 5, :LO_TEMP => 4, :DATE_ID => 1), Base.RefValue{Int64}(0))"
       ]
      },
      "metadata": {},
