--- a/julia-output/adv-functions.ipynb
+++ b/julia-output/adv-functions.ipynb
@@ -108,7 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using ForwardDiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,29 +131,25 @@
     }
    ],
    "source": [
-    "using ForwardDiff\n",
     "function newton(f::Function, x0::Number)\n",
-    "  local x1 = x0\n",
-    "  local dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "  local steps = 0\n",
-    "  while abs(dx) > 1e-6 && steps < 10\n",
-    "    x1 -= dx\n",
-    "    dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "    steps += 1\n",
+    "  for _ = 1:10\n",
+    "    dx = f(x0)/ForwardDiff.derivative(f, x0)\n",
+    "    x0 -= dx\n",
+    "    abs(dx) < 1e-6 && return x0\n",
     "  end\n",
-    "  x1\n",
+    "  x0\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4142135623746899"
+       "1.4142135623730951"
       ]
      },
      "metadata": {},
@@ -157,13 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "newton (generic function with 3 methods)"
+       "newton (generic function with 5 methods)"
       ]
      },
      "metadata": {},
@@ -171,22 +176,38 @@
     }
    ],
    "source": [
-    "function newton(f::Function, x0::Number, tol = 1e-6, max_steps = 10)\n",
-    "  local x1 = x0\n",
-    "  local dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "  local steps = 0\n",
-    "  while abs(dx) > tol && steps < max_steps\n",
-    "    x1 -= dx\n",
-    "    dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "    steps += 1\n",
+    "function newton(f::Function, x0::Number, tol::Real = 1e-6, max_steps::Integer = 10)\n",
+    "  for _ = 1:max_steps\n",
+    "    dx = f(x0)/ForwardDiff.derivative(f, x0)\n",
+    "    x0 -= dx\n",
+    "    abs(dx) < tol && return x0\n",
     "  end\n",
-    "  x1\n",
+    "  x0\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.23606797749979"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "newton(x -> x^2-5, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,37 +221,18 @@
     }
    ],
    "source": [
-    "newton(x -> x^2-5, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.236111111111111"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
     "newton(x->x^2-5, 2, 1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.236111111111111"
+       "2.236067977915804"
       ]
      },
      "metadata": {},
@@ -243,13 +245,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "newton (generic function with 3 methods)"
+       "newton (generic function with 5 methods)"
       ]
      },
      "metadata": {},
@@ -257,25 +259,21 @@
     }
    ],
    "source": [
-    "function newton(f::Function, x0::Number; tol = 1e-6, max_steps = 10)\n",
+    "function newton(f::Function, x0::Number, tol::Real = 1e-6, max_steps::Integer = 10)\n",
     "  tol > 0 || throw(ArgumentError(\"The parameter tol must be positive\"))\n",
     "  max_steps > 0 || throw(ArgumentError(\"The parameter max_steps must be positive\"))\n",
-    "  local x1 = x0\n",
-    "  local dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "  local steps = 0\n",
-    "  while abs(dx) > tol && steps < max_steps\n",
-    "    x1 -= dx\n",
-    "    dx = f(x1)/ForwardDiff.derivative(f, x1)\n",
-    "    steps += 1\n",
+    "  for _ = 1:max_steps\n",
+    "    dx = f(x0)/ForwardDiff.derivative(f, x0)\n",
+    "    x0 -= dx\n",
+    "    abs(dx) < tol && return x0\n",
     "  end\n",
-    "  steps < max_steps || throw(ErrorException(\"The maximum number of steps: $max_steps was reached without convergence\"))\n",
-    "  x1\n",
+    "  throw(ErrorException(\"The maximum number of steps: $max_steps was reached without convergence\"))\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -286,12 +284,12 @@
       "The maximum number of steps: 10 was reached without convergence\n",
       "\n",
       "Stacktrace:\n",
-      " [1] newton(f::typeof(f), x0::Int64; tol::Float64, max_steps::Int64)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:12\n",
+      " [1] newton(f::typeof(f), x0::Int64, tol::Float64, max_steps::Int64)\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X14sZmlsZQ==.jl:9\n",
       " [2] newton(f::Function, x0::Int64)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/adv-functions.ipynb:1\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X14sZmlsZQ==.jl:2\n",
       " [3] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/adv-functions.ipynb:2"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X15sZmlsZQ==.jl:2"
      ]
     }
    ],
@@ -302,13 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.764226660756428"
+       "newton (generic function with 5 methods)"
       ]
      },
      "metadata": {},
@@ -316,18 +314,27 @@
     }
    ],
    "source": [
-    "f(root)"
+    "function newton(f::Function, x0::Number; tol::Real = 1e-6, max_steps::Integer = 10)\n",
+    "  tol > 0 || throw(ArgumentError(\"The parameter tol must be positive\"))\n",
+    "  max_steps > 0 || throw(ArgumentError(\"The parameter max_steps must be positive\"))\n",
+    "  for _ = 1:max_steps\n",
+    "    dx = f(x0)/ForwardDiff.derivative(f, x0)\n",
+    "    x0 -= dx\n",
+    "    abs(dx) < tol && return x0\n",
+    "  end\n",
+    "  throw(ErrorException(\"The maximum number of steps: $max_steps was reached without convergence\"))\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.4142156862745099"
+       "1.4142135623746899"
       ]
      },
      "metadata": {},
@@ -340,13 +347,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.41421356237384"
+       "1.4142135623730951"
       ]
      },
      "metadata": {},
@@ -359,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -419,13 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "findMax (generic function with 1 method)"
+       "findMax (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -446,18 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "MethodError",
-     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching findMax(::Vector{Int64})\n",
       "The function `findMax` exists, but no method is defined for this combination of argument types.\n",
       "\n",
       "Closest candidates are:\n",
+      "  findMax(!Matched::Real, !Matched::Real)\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n",
       "  findMax(!Matched::Real...)\n",
       "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
       "\n",
@@ -474,13 +483,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "findMax (generic function with 2 methods)"
+       "findMax (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -501,12 +510,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "ename": "MethodError",
-     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Vector{Real})\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1\n  findMax(!Matched::Real, !Matched::Real)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n  findMax(!Matched::Real...)\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+     "evalue": "MethodError: no method matching findMax(::Vector{Int64})\nThe function `findMax` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  findMax(!Matched::Vector{Real})\n   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:1\n",
      "output_type": "error",
      "traceback": [
       "MethodError: no method matching findMax(::Vector{Int64})\n",
@@ -514,16 +523,12 @@
       "\n",
       "Closest candidates are:\n",
       "  findMax(!Matched::Vector{Real})\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X26sZmlsZQ==.jl:1\n",
-      "  findMax(!Matched::Real, !Matched::Real)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X24sZmlsZQ==.jl:1\n",
-      "  findMax(!Matched::Real...)\n",
-      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X25sZmlsZQ==.jl:1\n",
+      "   @ Main ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:1\n",
       "\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X30sZmlsZQ==.jl:1"
+      "   @ ~/code/sci-comp-book/julia-output/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X31sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -533,13 +538,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "findMax (generic function with 4 methods)"
+       "findMax (generic function with 2 methods)"
       ]
      },
      "metadata": {},
@@ -547,7 +552,7 @@
     }
    ],
    "source": [
-    "function findMax(arr::Vector{T}) where T <: Real\n",
+    "function findMax(arr::Vector{<:Real})\n",
     "\tlocal max = -Inf\n",
     "\tfor num in arr\n",
     "\t\tif num > max\n",
@@ -560,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -695,6 +700,67 @@
    ],
    "source": [
     "findProduct(collect(1:1//3:7//3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function median(arr::Vector{<:Real})\n",
+    "  nums = sort(arr)\n",
+    "  n = length(nums)\n",
+    "  isodd(n) ? nums[(1+n) ÷ 2] : 0.5*(nums[n ÷ 2] + nums[(n ÷ 2) + 1])\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 5.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "median([1,3,4,6,7]), median([1,3,4,6,7,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "collect(1:7)[6 ÷ 2]"
    ]
   },
   {
@@ -858,7 +924,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.1",
+   "display_name": "Julia 1.11.2",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -866,7 +932,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.1"
+   "version": "1.11.2"
   }
  },
  "nbformat": 4,
