--- a/julia-output/algorithm-analysis.ipynb
+++ b/julia-output/algorithm-analysis.ipynb
@@ -728,7 +728,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-rc3",
+   "display_name": "Julia 1.11.2",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -736,7 +736,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0-rc3"
+   "version": "1.11.2"
   }
  },
  "nbformat": 4,
